update to new github handle

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     function loadImage() {
       var mattImage = document.getElementById('matt');
       var randomNumber = Math.ceil((Math.random() * 100) % 32)
-      mattImage.src = "{{site.baseurl}}/assets/img/" + randomNumber + ".jpg"
+      mattImage.src = "{{site.baseurl}}/assets/img/23.jpg"
     }
   </script>
 </head>
@@ -25,9 +25,9 @@
         <h1>MATT GARNETT</h1>
         <div class="col-8 ">
           <p>
-            <a href="https://github.com/c-o-l-o-r">software engineer</a>,
+            <a href="https://github.com/lightclient">software engineer</a>,
             <a href="https://instagram.com/mattgarnett">traveler</a>,
-            <a href="https://github.com/c-o-l-o-r/q">blockchain enthusiast</a>,
+            <a href="https://ethresear.ch/u/matt">blockchains</a>,
             <a href="https://www.flickr.com/people/mattgarnett/">photographer</a>,
             <a href="https://twitter.com/matt_garnett">human</a>
           </p>
